src/test/rustdoc-ui/reference-link-reports-error-once.stderr
error: unresolved link to `ref`
  --> $DIR/reference-link-reports-error-once.rs:13:10
   |
LL | /// [a]: ref
   |          ^^^ no item named `ref` in scope
   |
note: the lint level is defined here
  --> $DIR/reference-link-reports-error-once.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `ref2`
  --> $DIR/reference-link-reports-error-once.rs:15:10
   |
LL | /// [b]: ref2
   |          ^^^^ no item named `ref2` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `ref`
  --> $DIR/reference-link-reports-error-once.rs:7:62
   |
LL | /// Other links to the same target should still emit error: [ref]
   |                                                              ^^^ no item named `ref` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `ref`
  --> $DIR/reference-link-reports-error-once.rs:8:16
   |
LL | /// Duplicate [ref]
   |                ^^^ no item named `ref` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `ref2`
  --> $DIR/reference-link-reports-error-once.rs:10:60
   |
LL | /// Other links to other targets should still emit error: [ref2]
   |                                                            ^^^^ no item named `ref2` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `ref2`
  --> $DIR/reference-link-reports-error-once.rs:11:16
   |
LL | /// Duplicate [ref2]
   |                ^^^^ no item named `ref2` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `ref`
  --> $DIR/reference-link-reports-error-once.rs:18:6
   |
LL | /// [ref][]
   |      ^^^ no item named `ref` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: aborting due to 7 previous errors

